--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 
     </div>
     <h4 id="info"></h4>
-    <script src="dist/index.js"></script>
+    <script src="dist/bundle.js"></script>
 </body>
