turtle equivalent is shown below

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h3>No Even Pile Nim</h3>
+    <h3>No Piles of Same Size and Same Count Nim</h3>
     <div id="nimGame">
 
     </div>
     <h4 id="info"></h4>
+    <h4 style="text-align: center;">Made by Oğuzhan Öztaşkın for Math 407 Game Theory</h4>
+    <h3>Turning Turtles</h3>
+    <div id="turtleGame">
+
+    </div>
+    <h4 id="infoTurtle"></h4>
     <script src="dist/bundle.js"></script>
 </body>
