--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+<html lang="tr">
 <head>
+    <meta charset="utf-8"/>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -13,6 +15,8 @@
     <div id="turtleGame">
 
     </div>
+    <button id="turtleSubmit">PLAY TURTLE MOVE</button>
     <h4 id="infoTurtle"></h4>
     <script src="dist/bundle.js"></script>
 </body>
+</html>
